Switched Netty with socket module

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>InternalAPI</module>
         <module>NettyAPI</module>
+        <module>SocketAPI</module>
     </modules>
 
     <properties>
