--- a/SocketAPI/pom.xml
+++ b/SocketAPI/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>NettyAPI</artifactId>
+    <artifactId>SocketAPI</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,11 +22,6 @@
             <groupId>net.bukkitlabs.bukkitlabscloud</groupId>
             <artifactId>InternalAPI</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.92.Final</version>
         </dependency>
     </dependencies>
 </project>
